Add Adafruit MQTT trial

--- a/secret.h.example
+++ b/secret.h.example
@@ -1,2 +1,11 @@
+#define AIO_SERVER      "io.adafruit.com"
+
+// Using port 8883 for MQTTS
+#define AIO_SERVERPORT  8883
+
+#define AIO_FEED       "/feeds/AirQ"
+
+// Adafruit IO Account Configuration
+// (to obtain these values, visit https://io.adafruit.com and click on Active Key)
 #define IO_USERNAME  ""
 #define IO_KEY       ""
